# fast-api-with-clean-architecture

./: .gitignore  .pre-commit-config.yaml  Readme.md  config.py  containers.py  context_vars.py  database.py  database_models.py  main.py  middlewares.py  pyproject.toml
common/: auth.py  logger.py  messaging.py
example/: async_ex.py  background_task.py  celery_task.py  context_sample.py  context_test.py  env_ex.py  middleware.py  sync_ex.py
migrations/: env.py
migrations/versions/: 2025_05_19_1036-f264e33dd862_add_user_table.py  2025_05_19_1646-3a65f17d76d7_user_add_memo.py  2025_05_21_1027-f007cc9b19cd_add_note_tag.py
note/application/: note_service.py
note/domain/repository/: note_repo.py
note/infra/db_models/: note.py
note/infra/repository/: note_repo.py
note/interface/controller/: note_controller.py
script/: db.sh  docker-compose.yml  user.py
script/init/: init.sql
tests/user/application/: user_service_test.py
tests/user/domain/: user_test.py
tests/user/infara/repository/: user_repo_test.py
tests/user/interface/controller/: user_controller_test.py
user/application/: email_service.py  send_welcome_email_task.py  user_service.py
user/domain/: user.py
user/domain/repository/: user_repo.py
user/infra/db_models/: user.py
user/infra/repository/: user_repo.py
user/interface/controller/: user_controller.py
utils/: auth.py  crypto.py  db_utils.py
